--- a/LAIG TP1/.project
+++ b/LAIG TP1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LAIG TP1</name>
+	<name>LAIG</name>
 	<comment></comment>
 	<projects>
 	</projects>
